--- a/static/base/base.css
+++ b/static/base/base.css
@@ -56,6 +56,8 @@ body{
 }
 
 #site_title{
+	text-decoration: none;
+	color: white; font-weight: bold;
 	font-family: monospace;
 	font-size: 50px;
 	margin: 0px 0px 0px 10px;
@@ -76,9 +78,9 @@ body{
 
 .option_block{
 	left: 600px;
+	width: 400px;
 	display: inline-block;
 	position: absolute;
-	float: right;
 }
 .site_options{
 	display: inline-block;
