--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 			<div class="site_options">
 				<a href="/about">About</a>
 				<a href="">Dashboard</a>
-				<a href="">Enter</a>
+				<a href="/auth">Enter</a>
 			</div>
 		</div>
 		
