dash borad ui and database temp model

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,11 +3,12 @@
 
 {% block extra_head %}
 	<link rel="stylesheet" type="text/css" href="{% static 'base/about.css' %}">
+	<title>about : Sakkhat</title>
 {% endblock %}
 
 {% block contents %}
 	<div class="block">
-		<img src="{% static 'base/res/about_back.jpg' %}" id="about_back">
+		<img src="{% static 'base/res/about_back.jpg' %}" style="position: relative; min-height: 700px; margin: 0px; width: 100%; float: left;">
 		<div class="content">
 			<h1>?</h1>
 			<p>
