--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,6 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="{% static 'base/base.css' %}">
-	<title>Sakkhat</title>
 	<link rel="icon" href="{% static 'base/res/sakkhat_w_b.png' %}">
 	{% block extra_head %}
 	{% endblock %}
@@ -33,7 +32,7 @@
 		<div class="option_block">
 			<div class="site_options">
 				<a href="/about">About</a>
-				<a href="">Dashboard</a>
+				<a href="/dashboard">Dashboard</a>
 				<a href="/auth">Enter</a>
 			</div>
 		</div>
