--- a/static/base/about.css
+++ b/static/base/about.css
@@ -1,18 +1,14 @@
+
 .block{
-	margin: 0px 0px 0px 0px auto;
-	width: 100%;
-	height: 100%;
-	background-image: url(res/about_back.jpg);
-	background-size: auto;
+	margin: 0px auto;
+	width: 100%; height: auto;
 }
 
-#about_back{
-	width: 100%;
-}
 .content{
+	display: block;
 	background-color: rgba(7,16,15,.5);
 	position: absolute;
-	top: 350px; 
+	width: 100%; top: 40%;
 }
 .heading{
 	font-size: 50px;
@@ -20,7 +16,7 @@
 
 .block h1 {
 	bottom: 0px;
-	width: 300px; height: 300px;
+	width: 20%; height: auto;
 	display: inline-block;
 	color: white; font-size: 250px;
 	margin: 0px 0px 0px 0px;
@@ -29,11 +25,41 @@
 }
 
 .block p {
-	height: 300px;
+	height: auto;
 	bottom: 0px;
 	font-size: 30px;
 	line-height: 40px;
 	text-align: left;
 	margin-right: 40px;
 	color: white; 
+}
+
+@media screen and (max-width: 800px){
+	.block h1 {
+	bottom: 0px;
+	width: 100px; height: 100px;
+	display: inline-block;
+	color: white; font-size: 80px;
+	margin: 0px 0px 0px 0px;
+	text-align: center;
+	float: left;
+	}
+
+	.heading{
+	font-size: 30px;
+	}
+
+	.block p {
+	height: auto;
+	bottom: 0px;
+	font-size: 20px;
+	line-height: 22px;
+	text-align: left;
+	margin-right: 40px;
+	color: white; 
+	}
+
+	.content {
+		top: 250px;
+	}
 }
