--- a/static/base/auth.css
+++ b/static/base/auth.css
@@ -1,6 +1,6 @@
 .block{
 	margin: 0px;
-	width: 100%; height: 700px;
+	width: 100%; height: 100%;
 }
 
 #sign_up_block{
@@ -59,4 +59,13 @@
 #sign_up_block span:hover , #sign_in_block span:hover {
 	color: #99DACA;
 	cursor: pointer;
+}
+
+@media screen and (max-width: 820px){
+	#sign_up_block{
+		top: 250px;
+	}
+	#sign_in_block{
+		top: 250px;
+	}
 }
