--- a/static/base/base.css
+++ b/static/base/base.css
@@ -5,11 +5,13 @@ body{
 
 .header{
 	height: 80px;
+	width: 100%;
 	background-color: black;
 }
 .banner{
-	width: 600px;
+	width: 500px;
 	display: inline-block;
+	background-color: black;
 }	
 .site_logo{
 	width: 80px; height: 80px;
@@ -77,28 +79,44 @@ body{
 }
 
 .option_block{
-	left: 600px;
-	width: 400px;
-	display: inline-block;
-	position: absolute;
+	float: right;
+	background-color: black;
+	margin: auto;
+	height: 100%;
+	line-height: 80px;
 }
 .site_options{
 	display: inline-block;
-	line-height: 80px;
+	margin: 0px;
 }
 
 .site_options a {
 	text-decoration: none;
 	color: black;
 	background-color: white;
-	margin-left: 10px;
+	margin-right: 10px;
 	font-size: 20px;
 	padding: 5px 10px 5px 10px;
 	border-radius: 10px;
 	font-weight: bold;
+	position: relative;
 }
 
 .site_options a:hover {
 	background-color: lightgray;
 	color: black;
+}
+
+@media screen and (max-width: 820px){
+	.header {
+		height: auto;
+	}
+	.banner {
+		float: none;
+		display: block;
+		width: 100%;
+	}
+	.option_block {
+		float: none;
+	}
 }
