--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 	
+{% block extra_head %}
+	<title>Sakkhat</title>
+{% endblock %}
+
 {% block contents %}
 	<h2>
 		Hello World
