temporary home view

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 
 
 {% block extra_head %}
-	<title>auth : Sakkhat</title>
+	<title>dashboard : Sakkhat</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'dash/dash.css' %}">
 {% endblock %}
 
