--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,20 @@
 {% extends "base.html" %}
+{% load staticfiles %}
+}
 	
 {% block extra_head %}
 	<title>Sakkhat</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'home/home.css' %}">
 {% endblock %}
 
 {% block contents %}
-	<h2>
-		Hello World
-	</h2>
+	<div class="home_block">
+		<div class="bg img1"></div>
+		<div class="bg img2"></div>
+		<div class="bg img3"></div>
+		<div class="bg img4"></div>
+		<div class="bg img5"></div>
+		<div class="bg img6"></div>
+		<div class="front_text">Sakkhat : alpha</div>
+	</div>
 {% endblock %}
