--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,7 +16,7 @@
 				<img src="{% static 'dash/res/space_logo.jpg' %}" id="space_logo"/>
 
 				<div class="right_options">
-					<a href="">New Post</a>
+					<a href="/createpost">New Post</a>
 				</div>
 				<div class="left_options">
 					 <a href="">L Option 1</a>
