--- a/templates/base.html
+++ b/templates/base.html
@@ -1,55 +1,30 @@
-{% load staticfiles %}
-
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="{% static 'base/base.css' %}">
-	<link rel="icon" href="{% static 'base/res/sakkhat_w_b.png' %}">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="{% static 'lib/css/bootstrap.min.css' %}">
 	{% block extra_head %}
+
 	{% endblock %}
 </head>
 <body>
-	<div class="header">
 
-		<div class="banner">
-			<div class="site_logo">
-				<div class="site_logo_inner">
-					<div class="site_logo_front">
-						<img src="{% static 'base/res/sakkhat_black.png' %}" class="sakkhat_ic">
-					</div>
-					<div class="site_logo_back">
-						<img src="{% static 'base/res/sakkhat_black.png' %}" class="sakkhat_ic">
-					</div>
-				</div>
-			</div>
+	{% block extra_content %}
 
-			<div class="site_theme">
-				<a id="site_title" href="/">Sakkhat</a>
-				<p id="site_moto">meet your needs</p>
-			</div>
-		</div>
-		
-		<div class="option_block">
-			<div class="site_options">
-				<a href="/about">About</a>
-				<a href="/dashboard">Dashboard</a>
-				<a href="/auth">Enter</a>
-			</div>
-		</div>
-		
-	</div>
 
-	</div>
+	{% endblock %}
 
-	<div class="contents">
-		{% block contents %}
-		{% endblock %}
-	</div>
+	<!-- JQuery , Popper and Bootstrap Library -->
+	<script type="text/javascript" src="{% static 'lib/js/jquery.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'lib/js/popper.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'lib/js/bootstrap.min.js' %}"></script>
 
-	<div class="footer">	
-		
-	</div>
+	{% block extra_script %}
+	<!-- react library, react scripts and other scripts -->
 
+	{% endblock %}
 
 </body>
 </html>
