--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,65 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="{% static 'lib/css/bootstrap.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/base.css'%}">
+
 	{% block extra_head %}
 
 	{% endblock %}
 </head>
 <body>
+
+	<div id="site-nav-bar">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+
+            <a class="navbar-brand" href="/" id="sakkhat-brand-link">
+                <img src="{% static 'res/sakkhat_black.png' %}">
+            </a>
+
+          
+            <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" 
+                data-target="#navb" aria-expanded="false">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+         
+
+            <div class="collapse navbar-collapse" id="navb">
+                <form class="form-inline my-2 my-lg-0 mr-auto">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                    <button class="btn btn-secondary my-2 my-sm-0" type="button">Search</button>
+                </form>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#trending">Trending</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/account/signin/">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/account/signup/">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/space/create/">Space Create</a>
+                    </li>
+                    <li class="nav-item" style="margin-right: 10px;">
+                        <a class="nav-link" href="/space/product/create/">Product Create</a>
+                    </li>
+
+                    <div class="nav-link btn-group">
+                        <div class="dropdown-toggle" data-toggle="dropdown" 
+                            style="cursor: pointer; color: white;"> 
+                            <img  src="{% static 'res/tony.jpg' %}" style="width: 25px; border-radius: 5px;">
+                        </div>
+                        <div class="dropdown-menu dropdown-menu-right" role="menu">
+                            <a class="list-group-item list-group-item-action" href="/account/">{{ request.user.name }}</a>
+                            <a class="list-group-item list-group-item-action" href="/space/">Stark Foundation</a>
+                            <a class="list-group-item list-group-item-action" href="/account/signout/">Signout</a>
+                        </div>
+                    </div>
+                </ul>
+            </div>    
+        </nav>
+    </div>
 
 	{% block extra_content %}
 
