--- a/static/css/generic/product_post_card.css
+++ b/static/css/generic/product_post_card.css
@@ -11,7 +11,8 @@
 	height: 200px; width: auto; max-width: 250px; margin: auto;
 }
 #product-card img:hover {
-	height: 205px;
+	/*height: 205px;*/
+	transform: scale(1.02);
 }
 
 #product-card button {
