--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -158,7 +158,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <a class="list-group-item bg-primary" href="#" style="text-decoration: none; color: white;"><h4 style="margin: 0px">Related Products</h4></a>
+                <a class="list-group-item bg-primary" href="#" style="text-decoration: none; color: white;"><h4 style="margin: 0px">Products you may like</h4></a>
                 <br>
                 <div class="owl-carousel owl-theme">
                     {% for post in related_products %}
