--- a/templates/space/manage/index.html
+++ b/templates/space/manage/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Space Name</title>
+	<title>{{ space.name }}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'lib/css/emoji.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/space/manage/index.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/generic/product_post_card.css' %}">
